Fix navigation alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,21 @@ p {
   color: rgba(255,255,255,1);
 }
 
+.nav-txt {
+  display: block;
+  padding: .5rem 1rem;
+  color: #fff;
+}
+
+.nav-icn {
+  padding-left: 2rem;
+}
+
+.nav-btn {
+  position: relative;
+  top: 0.11764rem;
+}
+
 .bg-dark {
   background-color: var(--darkBlue)!important;
 }
